# raytracingDemo

./: CMakeLists.txt  README.md  main.cpp
include/: BVHTree.hpp  Bounds.hpp  Camera_Movement.h  HDRreader.hpp  Init.h  My_Shader.h  RenderPass.hpp  Triangle.hpp  model.hpp
lib/: tinyobjloader.lib
resources/: SchoolCFF7.mtl
shaders/: pass1.fs  pass1new.fs  pass2.fs  rt.vs
src/: My_Shader.cpp  glad.c
src/imgui/: imgui.cpp
